--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.servlet.context-path=/api
+server.port=80
+springdoc.api-docs.path=/docs
+springdoc.swagger-ui.path=/swagger-ui
+# max file size
+spring.servlet.multipart.max-file-size=10MB
+# max request size
+spring.servlet.multipart.max-request-size=10MB
+# files storage location (stores all files uploaded via REST API)
+storage.location=./images
