--- a/.github/workflows/android-gradle.yml
+++ b/.github/workflows/android-gradle.yml
@@ -15,17 +15,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Change to directory
-      run: cd android
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Change to directory
+      run: cd android/
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Clean project with Gradle
       run: ./gradlew clean
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew assembleDebug
