--- a/.github/workflows/android-gradle.yml
+++ b/.github/workflows/android-gradle.yml
@@ -21,11 +21,9 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Change to directory
-      run: cd android/
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x android/gradlew
     - name: Clean project with Gradle
-      run: ./gradlew clean
+      run: ./android/gradlew clean
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: ./android/gradlew assembleDebug
