--- a/.github/workflows/android-gradle.yml
+++ b/.github/workflows/android-gradle.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x android/gradlew
     - name: Clean project with Gradle
-      run: ./android/gradlew clean
+      run: cd android && ./gradlew clean
     - name: Build with Gradle
-      run: ./android/gradlew assembleDebug
+      run: cd android && ./gradlew assembleDebug
