--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     package="pt.ulisboa.tecnico.cmov.shopist">
 
     <application
-        android:name="pt.ulisboa.tecnico.cmov.shopist.data.AppContextData"
+        android:name=".data.AppContextData"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShopIST">
+        <activity
+            android:name=".PantryActivity"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
