--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="pt.ulisboa.tecnico.cmov.shopist">
 
     <application
-        android:name=".data.AppContextData"
+        android:name=".pojo.AppContextData"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
