--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:name=".pojo.AppContextData"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ShopIST">
+        android:theme="@style/Theme.ShopIST"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".AddProductsActivity"></activity>
         <activity
             android:name=".PantryActivity"
             android:parentActivityName=".MainActivity" />
