--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,8 @@ android {
 }
 
 dependencies {
-    def room_version = "2.2.6"
+    def room_version = "2.3.0-alpha02"
+    def dagger_version = "2.34.1"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -43,10 +44,13 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-rxjava3:$room_version"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation "com.google.dagger:dagger:$dagger_version"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
 }
