--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,9 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.wear:wear:1.0.0'
+    compileOnly 'com.google.android.wearable:wearable:2.6.0'
     def room_version = "2.3.0-alpha02"
     def dagger_version = "2.34.1"
 
@@ -37,6 +40,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation "io.reactivex.rxjava3:rxjava:3.0.12"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
