--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -13,11 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShopIST"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ScanCodeActivity" />
         <activity android:name=".AddPantryProductsActivity" />
         <activity android:name=".AddStoreProductsActivity" />
-        <activity android:name=".StoreActivity"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".PantryActivity"
+        <activity
+            android:name=".StoreActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".PantryActivity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
