--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.wear:wear:1.0.0'
+    implementation project(path: ':Termite-WifiP2P-API')
     compileOnly 'com.google.android.wearable:wearable:2.6.0'
     def room_version = "2.3.0-alpha02"
     def dagger_version = "2.34.1"
