--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,15 +10,16 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        tools:replace="android:theme,android:icon"
-        android:name="pt.ulisboa.tecnico.cmov.shopist.AppGlobalContext"
+        android:name=".AppGlobalContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShopIST"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:replace="android:theme,android:icon">
+        <activity android:name=".CartActivity"></activity>
         <activity android:name=".ScanCodeActivity" />
         <activity android:name=".AddPantryProductsActivity" />
         <activity android:name=".AddStoreProductsActivity" />
@@ -43,7 +44,6 @@
             android:value="@string/places_api_key" />
 
         <service android:name="pt.inesc.termite.wifidirect.service.SimWifiP2pService" />
-
     </application>
 
 </manifest>
