--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.budiyev.android:code-scanner:2.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     implementation "io.reactivex.rxjava3:rxjava:3.0.12"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
